--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,27 @@
 <% provide(:title, 'Sign up') %>
-  <h1>Sign up</h1>
-
+<section class="section-margins">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-4">
+      <h1 class="title">Sign up</h1>
       <%= form_for(@user, url: signup_path) do |f| %>
-      <%= render 'shared/error_messages', object: f.object%>
-      <%= f.label :username %>
-      <%= f.text_field :username, class: 'form-control' %>
+        <%= render 'shared/error_messages', object: f.object%>
+        <%= f.label :username %>
+        <%= f.text_field :username, class: 'form-control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-      <h3>
-        <small>Your password must be at least 6 characters long, include a number, a
-          special character, an uppercase letter and a lowercase letter.</small>
-      </h3>
-    <% end %>
+        <%= f.submit "Create account", class: "btn btn-primary button-wide" %>
+        <h4>
+          <small>
+            Your password must be at least 6 characters long, include a number, a
+            special character, an uppercase letter and a lowercase letter.
+          </small>
+        </h4>
+      <% end %>
+    </div>
   </div>
-</div>
+</section>
