Update About page and README.md to include API details

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,15 +4,25 @@
     <div class="col-md-8">
       <h1 class="title">About</h1>
       <p>
-        Hi there! I'm glad you wanted to know a little bit more about this project &#128513;
+        Hi there!
         <br><br>
-        Deployed is basically something fun I wanted to try while learning Rails.
-        The end product is meant to almost be as if Hacker News and Reddit fell
-        in love and had a baby, then this website would be that cute little guy.
+        I'm glad you wanted to know a little bit more about this project &#128513;
         <br><br>
-        Feel free to check out my other stuff at <%= link_to "GitHub", ('https://github.com/JoshJon')%> &#9996;
+        Deployed is a tech themed social news and discussion website similar to Hacker News.
+        Users can sign up for an account, create posts, and commenton topics to
+        partake in discussion.
         <br><br>
-        - Joshua
+        Ultimately, this project was something fun I wanted to make while learning Rails.
+        <br><br>
+        Created by Joshua Jon &#9996;
+        <br>
+        Github: <%= link_to nil, ('https://github.com/joshjon')%>
+        <br><br>
+      </p>
+      <h1 class="title">API</h1>
+      <p>
+        Deployed also has its very own API.<br>
+        The documentation can be found here: <%= link_to nil, ('https://github.com/joshjon/deployed')%>
       </p>
     </div>
   </div>
